<resources>
    <string name="app_name">course_work</string>
    <string name="name_hint">name...</string>
    <string name="group_hint">group...</string>
    <string name="note_hint">note...</string>
    <string name="save">Сохранить</string>
    <string name="name">имя</string>
    <string-array name="cat_names">
        <item>Рыжик</item>
        <item>Барсик</item>
        <item>Мурзик</item>
        <item>Мурка</item>
        <item>Васька</item>
        <item>Томасина</item>
        <item>Кристина</item>
        <item>Пушок</item>
        <item>Дымка</item>
        <item>Кузя</item>
        <item>Китти</item>
        <item>Масяня</item>
        <item>Симба</item>
    </string-array>
</resources>