<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="10dp" >

    <TextView
        android:id="@+id/note_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/name"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <View
        android:id="@+id/add_item_line"
        android:layout_width="match_parent"
        android:layout_height="2dp" />

    <EditText
        android:id="@+id/input_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name_hint"
        android:minHeight="48dp">

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/input_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/group_hint"
        android:minHeight="48dp">
        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/input_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/note_hint"
        android:minHeight="48dp">

        <requestFocus />
    </EditText>

</LinearLayout>